@@ -7,94 +7,26 @@
 ]>
 <sect2 id="rndesktop">
 
-    <title>Desktop</title>
-
-    <sect3 id="rnnautilus"><title>The File Manager</title>
-    <para>
-    The GNOME file manager now uses an improved and standardized file-type system. This allows applications to tell GNOME that they can open certain types of file. The same system will soon be used by other desktops such as KDE, so this will allow different desktops and applications to work together more smoothly. Because this is a new system, applications must update how they register their file types. This should happen automatically when Linux distributions provide an upgrade to GNOME &version;.</para>
-    <para>
-    For each file-type there is a default application that will open the file when you double-click on the it. However, other applications might also be able to open the file type, so you can right-click and choose &quot;Open With&quot; to select one of these applications.
-    </para>
-
-    <figure id="rnscreenshot-nautilus-new-mime">
-      <title>New MIME system</title>
-        <screenshot>
-          <mediaobject>
-            <imageobject><imagedata fileref="&urlfiguresbase;figure-nautilus-context-menu.png" format="PNG"/>
-            </imageobject>
-            <textobject><phrase>Select an application</phrase></textobject>
-          </mediaobject>
-       </screenshot>
-     </figure>
-
-     <para>In the rare case that an application has not registered itself properly, or when you wish to use a different application to open a certain file type, you can add it manually. You can also use the properties page to select your default
-     application for files of that type.</para>
-
-    <figure id="rnscreenshot-nautilus-new-mime-properties">
-      <title>Add a new file handler</title>
-        <screenshot>
-          <mediaobject>
-            <imageobject><imagedata fileref="&urlfiguresbase;figure-nautilus-properties+add-application.png" format="PNG"/>
-            </imageobject>
-            <textobject><phrase>Add an application to the list of handlers</phrase></textobject>
-          </mediaobject>
-       </screenshot>
-     </figure>
-
-    <para>
-    GNOME now supports <literal>DNS-Based Service Discovery</literal>, also known as Rendezvous in Apple's products. This allows you to view locally-available shares in your Network view.
-    </para>
-    <figure id="rnscreenshot-nautilus-dnsdiscovery">
-      <title>Network Shares</title>
-        <screenshot>
-          <mediaobject>
-            <imageobject><imagedata fileref="&urlfiguresbase;figure-nautilus-rendezvous.png" format="PNG"/>
-            </imageobject>
-            <textobject><phrase>Network view, featuring a local server.</phrase></textobject>
-          </mediaobject>
-       </screenshot>
-     </figure>
-
-    <para>
-    Removable storage devices, such as CDs, DVDs, USB memory sticks, and cameras, can now be recognised and mounted automatically. GNOME can even start an appropriate application automatically, such as a music or DVD player, or a photograph organiser. This uses the Hardware Abstraction Layer from freedesktop.org, which we also expect future versions of other desktops to use.
-    </para>
-    <figure id="rnscreenshot-nautilus-gvm">
-      <title>Inserting a multisession Compact Disc</title>
-        <screenshot>
-          <mediaobject>
-            <imageobject><imagedata fileref="&urlfiguresbase;figure-insert-cd.png" format="PNG"/>
-            </imageobject>
-            <textobject><phrase>Inserting a multisession Compact Disc</phrase></textobject>
-          </mediaobject>
-       </screenshot>
-     </figure>
-
-  <para>Other File Manager improvements include:
-    <itemizedlist>
-      <listitem><para>Now allows access to password-protected FTP sites.</para></listitem>
-      <listitem><para>Copying a folder over a folder of the same name now offers to merge the two directories.</para></listitem>
-      <listitem><para>The CD burner's preferences dialog has been simplified.</para></listitem>
-    </itemizedlist>
-  </para>
- 
-  </sect3>
-
-  <sect3>
   <title>Desktop</title>
-  <para>GNOME contains several user interface themes, allowing you to change the appearance of your whole environment via the themes control panel. And GNOME &version; contains the new &quot;Glider&quot; theme. It's intended to be simple yet attractive.</para>
 
-  <para>  
-    <figure id="rnscreenshot-theme-glider">
-      <title>The Glider theme.</title>
-        <screenshot>
-          <mediaobject>
-            <imageobject><imagedata fileref="&urlfiguresbase;figure-glider-theme.png" format="PNG"/>
-            </imageobject>
-            <textobject><phrase>The Glider theme</phrase></textobject>
-          </mediaobject>
-       </screenshot>
-     </figure>
-  </para>
-
+  <sect3 id="rnnautilus"><title>The File Manager</title>
+    <para>
+     Nautilus continues to become the fastest and most stable file browser
+     available, with the focus of Nautilus &version; being increased stability
+     and speed.
+    </para>
+    <para>
+     Nautilus now has improved interoperability with other applications (such as
+     Mozilla and Firefox) and more navigation options in both spatial and
+     browser modes.
+    </para>
+    <para>
+     Part of improving the stability of Nautilus &version; involved the removal
+     of the venerable Bonobo Views. These have now been replaced by the more
+     powerful Nautilus Views. Nautilus Views allow the Nautilus file browser to
+     be more easily extensible by other developers. Allowing Nautilus to display
+     data in a variety of different ways.
+    </para>
   </sect3>
+
 </sect2>
