@@ -1,3 +1,9 @@
+2005-02-15  Davyd Madeley  <davyd@madeley.id.au>
+
+	* release-notes.xml:
+	* rndesktop.xml:
+	* rnapplets.xml: Start updating content.
+
 2005-02-05  Murray Cumming  <murrayc@murrayc.com>
 
 	* regexxer-ed the version numbers so that we mentin 2.10 instead of 
